actualización avances portfolio

--- a/galería.html
+++ b/galería.html
@@ -3,12 +3,15 @@
 <head>
 <meta charset="utf-8">
 <title>Galería</title>
-	<link href="estilogaleria.css" rel="stylesheet" type="text/css">
+	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 
 <body>
 		<header>
+	<div class="logo">
+			<a href="index.html"> <img src="img/logo blanco.png" alt="logo" class="logo"></a>
+		</div>
 	<nav>
     	<ul class="menu">
       		<li><a href="index.html">Inicio</a></li>
@@ -19,15 +22,56 @@
 		</header>
 	<main>
 	<h1>Galería de proyectos</h1>
+		
 	 <div class="galería">
-			<img src="img/postal.jpg" alt="postal">
-			<img src="img/postales.jpg" alt="postales">
-			<img src="img/afiches.jpg" alt="afiches">
-			<img src="img/arquigrafías.jpg" alt="arquigrafías">
-		 	<img src="img/tapa.jpg" alt="tapa">
-			<img src="img/Mockup interior.jpg" alt="mockup interior">
-		 	<img src="img/Mockup exterior.jpg" alt="mockup exterior">
-		 	<img src="img/mariposa.jpg"img/arquigrafías.jpg"" alt="mariposa">
+			<div class="imagen">
+			<img src="img/fabulas.png" alt="fabulas">
+			<div class="epigrafe">Reedición del libro Fábulas españolas</div>
+			</div>
+		<div class="imagen">
+			<img src="img/fabulas-a.png" alt="fabulas-a">
+			<div class="epigrafe">Reedición del libro Fábulas españolas</div>
+		</div>
+		<div class="imagen">
+			<img src="img/afiches.png" alt="afiches">
+			<div class="epigrafe">Afiches para muestra de Julio Le Parc</div>
+			</div>
+		<div class="imagen">
+			<img src="img/arquigrafías.png" alt="arquigrafias">
+			<div class="epigrafe">Arquigrafías para muestra de Julio Le Parc</div>
+			</div>
+		<div class="imagen">
+			<img src="img/catalogo.png" alt="catalogo">
+			<div class="epigrafe">Catálogo para muestra de Julio Le Parc</div>
+			</div>
+		<div class="imagen">
+			<img src="img/mariposa.png" alt="infografia">
+			<div class="epigrafe">Infografía sobre le ciclo de vida de la mariposa</div>
+			</div>
+		<div class="imagen">
+			<img src="img/postales.png" alt="postales">
+			<div class="epigrafe">Postales de lettering</div>
+			</div>
+		<div class="imagen">
+			<img src="img/Mockup exterior.png" alt="mockup exterior">
+			<div class="epigrafe">Infografía para armar tu propia huerta</div>
+			</div>
+		<div class="imagen">
+			<img src="img/Mockup interior.png" alt="mockup interior">
+			<div class="epigrafe">Infografía para armar tu propia huerta</div>
+			</div>
+		<div class="imagen">
+			<img src="img/latas.png" alt="latas">
+			<div class="epigrafe">Creación de latas de bebida energizante para marca Lenovo</div>
+			</div>
+		<div class="imagen">
+			<img src="img/menu.png" alt="menu">
+			<div class="epigrafe">Creación de Menú para bodegón</div>
+			</div>
+		<div class="imagen">
+			<img src="img/tapa.png" alt="libro">
+			<div class="epigrafe">Libro sobre el uso de la retícula en tipografía</div>
+			</div>
 	</div>
 	</main>
 	<footer class="footer">Curriculum Vitae y portfolio realizados para Computación III / Universidad Nacional de Lanús</footer>
