--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 	<link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
+	
 	<header>
-		<img src="img/foto-cv.png" alt="foto de agus" class="foto">
+		<div class="logo">
+			<a href="index.html"> <img src="img/logo blanco.png" alt="logo" class="logo"></a>
+		</div>
 	<nav>
     	<ul class="menu">
       		<li><a href="index.html">Inicio</a></li>
@@ -16,31 +19,22 @@
       		<li><a href="contacto.html">Contacto</a></li>
     	</ul>
  	</nav>
+	
 		</header>
-<main>	
+<main class="main-index">	
 <div class="contenedor">	
 	<aside class="aside">
-
-	
-		<div class="contacto"> 
-		<h2>CONTACTO</h2>
-		</div>
+		<img src="../../REPOSITORIOS/cv-marino/img/fotocv.png" alt="foto de agus" class="foto">
 		
-	<div class="svg"> 
-			<nav class="botones-izquierda"> 
-		<ul class="svg">
-			<li><img src="img/correo-electronico.svg" alt="Email" width= "40px" height="40px" ></li>
-			<li><img src="img/whatsapp-_1_.svg" alt="Teléfono" width= "40px" height="40px"></li>
-			<li><img src="img/instagram-_1__1.svg" alt="Instagram" width= "40px" height="40px" ></li>
-			<li><img src="img/behance_1.svg" alt="Behance" width= "40px" height="40px"></li>
+	
+	<div class="redes"> 
+			<nav> 
+		<ul class="iconos">
+			<li><a href="mailto:agustinamarino20@gmail.com"> <img src="img/correo-electronico.svg" alt="Email" width= "40px" height="40px" ></a></li>
+			<li><a href="https://api.whatsapp.com/send?phone=1164263486" target="_blank"><img src="img/whatsapp-_1_.svg" alt="Teléfono" width= "40px" height="40px"></a></li>
+			<li><a href="https://www.instagram.com/aguusmarino/" target="_blank"><img src="img/instagram-_1__1.svg" alt="Instagram" width= "40px" height="40px" ></a></li>
+			<li><a href="https://www.behance.net/agustinamarino5" target="_blank"><img src="img/behance_1.svg" alt="Behance" width= "40px" height="40px"></a></li>
 			</ul>
-
-		<ul class="botonera"> 
-			<li><a href="mailto:agustinamarino20@gmail.com">Email</a></li>
-			<li><a href="https://api.whatsapp.com/send?phone=1164263486" target="_blank">Whatsapp</a></li>
-			<li><a href="https://www.instagram.com/aguusmarino/" target="_blank">Instagram</a></li>
-			<li><a href="https://www.behance.net/agustinamarino5" target="_blank">Behance</a></li>
-		</ul>
 	</nav>
 	</div>
 	<article class="intereses">
