--- a/contacto.html
+++ b/contacto.html
@@ -3,29 +3,44 @@
 <head>
 <meta charset="utf-8">
 <title>Contacto</title>
-	<link href="estiloform.css" rel="stylesheet" type="text/css">
+	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 
 <body>
+<header>
+		<div class="logo">
+			<a href="index.html"> <img src="img/logo blanco.png" alt="logo" class="logo"></a>
+		</div>
+	<nav>
+		<ul class="menu">
+			<li><a href="index.html">Inicio</a></li>
+			<li><a href="galería.html">Galería</a></li>
+			<li><a href="contacto.html">Contacto</a></li>
+		</ul>
+	</nav>
+	
+		</header>
+	<main>
+		<div class="contenedor-form">
+			<h2>Contactate conmigo !</h2>
+			<form action="/submit_form" method="post">
+		
+			<label for="Nombre">Nombre</label>
+			<input type="text" id="Nombre" name="Nombre" placeholder="Escribe tu nombre completo.." required>
+		
+			<label for="Empresa o trabajo">Empresa o trabajo</label>
+			<input type="text" id="Empresa o trabajo" name="Empresa o trabajo" placeholder="Inidica tu empresa o tipo de trabajo " required>
 
-<div class="container">
-        <h2>Contactate conmigo !</h2>
-        <form action="/submit_form" method="post">
-            <label for="Nombre">Nombre</label>
-            <input type="text" id="Nombre" name="Nombre" placeholder="Escribe tu nombre completo..">
+			<label for="email">Email</label>
+			<input type="email" id="email" name="email" placeholder="Escribe tu Email.." required>
 
-            <label for="Empresa o trabajo">Empresa o trabajo</label>
-            <input type="text" id="Empresa o trabajo" name="Empresa o trabajo" placeholder="Inidica tu empresa o tipo de trabajo ">
-
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Escribe tu Email..">
-
-            <label for="consulta">Consulta</label>
-            <textarea id="consulta" name="consulta" placeholder="Escribeme tu consulta.." style="height:200px"></textarea>
-
-            <input type="Enviar" id="enviar" value="Enviar">
-        </form>
-    </div>
+			<label for="consulta">Consulta</label>
+			<textarea id="consulta" name="consulta" placeholder="Escribeme tu consulta.." style="height:200px" required></textarea>
+			<input type="submit" id="enviar" value="Enviar">
+		</form>
+		</div>
+	</main>
+	<footer class="footer">Curriculum Vitae y portfolio realizados para Computación III / Universidad Nacional de Lanús</footer>
 </body>
 </html>
