--- a/index.html
+++ b/index.html
@@ -2,108 +2,137 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Agustina Marino - Curriculum Vitae</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
-	
 	<header>
 		<div class="logo">
 			<a href="index.html"> <img src="img/logo blanco.png" alt="logo" class="logo"></a>
 		</div>
-	<nav>
-    	<ul class="menu">
-      		<li><a href="index.html">Inicio</a></li>
-      		<li><a href="galería.html">Galería</a></li>
-      		<li><a href="contacto.html">Contacto</a></li>
-    	</ul>
- 	</nav>
-	
-		</header>
-<main class="main-index">	
-<div class="contenedor">	
-	<aside class="aside">
-		<img src="../../REPOSITORIOS/cv-marino/img/fotocv.png" alt="foto de agus" class="foto">
-		
-	
-	<div class="redes"> 
-			<nav> 
-		<ul class="iconos">
-			<li><a href="mailto:agustinamarino20@gmail.com"> <img src="img/correo-electronico.svg" alt="Email" width= "40px" height="40px" ></a></li>
-			<li><a href="https://api.whatsapp.com/send?phone=1164263486" target="_blank"><img src="img/whatsapp-_1_.svg" alt="Teléfono" width= "40px" height="40px"></a></li>
-			<li><a href="https://www.instagram.com/aguusmarino/" target="_blank"><img src="img/instagram-_1__1.svg" alt="Instagram" width= "40px" height="40px" ></a></li>
-			<li><a href="https://www.behance.net/agustinamarino5" target="_blank"><img src="img/behance_1.svg" alt="Behance" width= "40px" height="40px"></a></li>
+		<nav>
+			<ul class="menu">
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="galería.html">Galería</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
 			</ul>
-	</nav>
-	</div>
-	<article class="intereses">
-		<h2>INTERESES</h2>
-			<ul>
-			<li>Diseño</li>
-            <li>Deportes</li>
-            <li>Arte</li>
-            <li>Música</li>
-            <li>Viajes</li>
-			<li>Gatos</li>
-			</ul>
-	</article>
-	<article class="idiomas">
-		<h2>IDIOMAS</h2>
-			<ul>
-				<li>Español</li>
-				<li>Inglés</li>
-			</ul>
-	</article>
-	<article class="informatica">
-			<h2>INFORMÁTICA</h2>
-			<ul>
-				<li>Paquete Office</li>
-				<li>Adobe Illustrator</li>
-				<li>Adobe InDesign</li>
-				<li>Adobe Lightroom</li>
-				<li>Adobe Photoshop</li>
-			</ul>
-		</article>
-	</aside>
-		
-<section>
-	<article class="perfil">
-			<h2>Perfil</h2>
-				<p> Soy una persona con decisión y energía, tendiente a marcarme objetivos superiores a los establecidos, de forma realista. Poseo competencias de trabajo en equipo y atención al detalle. Deseo insertarme en el mundo del trabajo de manera estable, preferentemente en áreas vinculadas con la carrera que estoy cursando. Y, a su vez, desarrollar mis habilidades para contribuir con el logro de los objetivos de la organización que requiera mis servicios. Busco profundizar mis conocimientos y adquirir aptitudes, en pos de lograr un excelente desempeño, en beneficio propio y de la organización.</p>
-	</article>
-			
-	<article class="experiencia">
-			<h2>Experiencia laboral</h2>
-	</article>	
-			<article class="trabajos">
-				<h3>Coordinadora administrativa</h3>
-				<ul>
-				<li>Atención al público</li>
-				<li>Atención online</li>
-				<li>Uso y manejo de planillas excel y paquete Office</li></ul>
-				<p class="fines">2020 hasta la actualidad - Plan Fines</p>
-				<h3>Casa de la Cultura - Almirante Brown</h3>
-				<ul>
-				<li>Ayudante de secretaria</li>
-				</ul>
-				<p class="casa de la cultura">Agosto 2019 - Octubre 2020 </p>
-			</article>	
-			
+ 		</nav>
+	</header>
+	<main class="main-index">	
+		<div class="contenedor">	
+			<aside class="aside">
+				<img src="img/fotocv.png" class="foto" alt="foto agus">
+				<div class="redes"> 
+					<nav> 
+						<ul class="iconos">
+							<li><a href="mailto:agustinamarino20@gmail.com"> <img src="img/correo-electronico.svg" alt="Email" width= "40px" height="40px" ></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=1164263486" target="_blank"><img src="img/whatsapp-_1_.svg" alt="Teléfono" width= "40px" height="40px"></a></li>
+							<li><a href="https://www.instagram.com/aguusmarino/" target="_blank"><img src="img/instagram-_1__1.svg" alt="Instagram" width= "40px" height="40px" ></a></li>
+							<li><a href="https://www.behance.net/agustinamarino5" target="_blank"><img src="img/behance_1.svg" alt="Behance" width= "40px" height="40px"></a></li>
+						</ul>
+					</nav>
+				</div>
+				<article class="intereses">
+					<h2>INTERESES</h2>
+					<ul>
+						<li>Diseño</li>
+						<li>Deportes</li>
+						<li>Arte</li>
+						<li>Música</li>
+						<li>Viajes</li>
+						<li>Gatos</li>
+					</ul>
+				</article>
+				<article class="idiomas">
+					<h2>IDIOMAS</h2>
+					<ul>
+						<li>Español</li>
+						<li>Inglés</li>
+					</ul>
+				</article>
+				<article class="informatica">
+					<h2>INFORMÁTICA</h2>
+					<ul>
+						<li>Paquete Office</li>
+						<li>Adobe Illustrator</li>
+						<li>Adobe InDesign</li>
+						<li>Adobe Lightroom</li>
+						<li>Adobe Photoshop</li>
+					</ul>
+			 </article>
 
-			<article class="formacion academica">
-			<h2>Formación académica </h2>
+		 </aside>
+
+		 <section>
+
+		 <article class="perfil">
+		 <h2>Perfil</h2>
+
+		 <p>Soy una persona con decisión y energía, tendiente a marcarme objetivos superiores a los establecidos, de forma realista. Poseo competencias de trabajo en equipo y atención al detalle. Deseo insertarme en el mundo del trabajo de manera estable, preferentemente en áreas vinculadas con la carrera que estoy cursando. Y, a su vez, desarrollar mis habilidades para contribuir con el logro de los objetivos de la organización que requiera mis servicios. Busco profundizar mis conocimientos y adquirir aptitudes, en pos de lograr un excelente desempeño, en beneficio propio y de la organización.</p>
+
+		 </article>
+
+		 <article class="experiencia">
+
+		 <h2>Experiencia laboral</h2>
+
+		 </article>
+
+		 <article class="trabajos">
+
+		 <h3>Coordinadora administrativa</h3>
+
+		 <ul>
+
+		 <li>Atención al público</li>
+
+		 <li>Atención online</li>
+
+		 <li>Uso y manejo de planillas excel y paquete Office</li>
+
+		 </ul>
+
+		 <p class="fines">2020 hasta la actualidad - Plan Fines</p>
+
+		 <h3>Casa de la Cultura - Almirante Brown</h3>
+
+		 <ul>
+
+		 <li>Ayudante de secretaria</li>
+
+		 </ul>
+
+		 <p class="casa de la cultura">Agosto 2019 - Octubre 2020 </p>
+
+		 </article>
+
+
+		 <article class="formacion academica">
+
+		 <h2>Formación académica </h2>
+
+		 </article>
+
+
+		 <article class="estudios">
+
+		 <h3>Universidad Nacional de Lanús</h3>
+
+		 <p>Licenciatura en Diseño y Comunicación visual</p>
+
+		 <h3>Instituto del Prado</h3>
+
+		 <p>Educación secundaria con orientación en Comunicación</p>
+
 		</article>
-			
-			<article class="estudios">
-				<h3>Universidad Nacional de Lanús</h3>
-				<p>Licenciatura en Diseño y Comunicación visual</p>
-				<h3>Instituto del Prado</h3>
-				<p>Educación secundaria con orientación en Comunicación</p>
-		</article>
-	 </section>
-	</div>
-	</main>
-	<footer class="footer">Curriculum Vitae y portfolio realizados para Computación III / Universidad Nacional de Lanús</footer>
+		</section>
+			<div class="estrella-g">
+			<img src="img/estrella grande.png" alt="estrella" class="estrella-g">
+		</div>
+		</div>
+		</main>
+	<footer>Curriculum Vitae y portfolio realizados para Computación III / Universidad Nacional de Lanús</footer>
 	</body>
 	</html>
