--- a/galería.html
+++ b/galería.html
@@ -1,79 +1,79 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Galería</title>
-	<link href="estilos.css" rel="stylesheet" type="text/css">
-	<link rel="icon" href="img/favicon.png" type="image/png">
-</head>
-
-<body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Galería</title>
+		<link href="estilos.css" rel="stylesheet" type="text/css">
+		<link rel="icon" href="img/favicon.png" type="image/png">
+	</head>
+	<body>
 		<header>
-	<div class="logo">
-			<a href="index.html"> <img src="img/logo blanco.png" alt="logo" class="logo"></a>
-		</div>
-	<nav>
-    	<ul class="menu">
-      		<li><a href="index.html">Inicio</a></li>
-      		<li><a href="galería.html">Galería</a></li>
-      		<li><a href="contacto.html">Contacto</a></li>
-    	</ul>
- 	</nav>
-		</header>
+			<div class="logo">
+				<a href="index.html"> <img src="img/logo blanco.png" alt="logo" class="logo"></a>
+			</div>
+		<nav>
+    		<ul class="menu">
+      			<li><a href="index.html">Inicio</a></li>
+      			<li><a href="galería.html">Galería</a></li>
+      			<li><a href="contacto.html">Contacto</a></li>
+    		</ul>
+ 		</nav>
+	</header>
 	<main>
-	<h1>Galería de proyectos</h1>
-		
-	 <div class="galería">
+		<h1>Galería de proyectos</h1>
+	 	<div class="galería">
 			<div class="imagen">
-			<img src="img/fabulas.png" alt="fabulas">
-			<div class="epigrafe">Reedición del libro Fábulas españolas</div>
+				<img src="img/fabulas.png" alt="fabulas">
+				<div class="epigrafe">Reedición del libro Fábulas españolas</div>
 			</div>
-		<div class="imagen">
-			<img src="img/fabulas-a.png" alt="fabulas-a">
-			<div class="epigrafe">Reedición del libro Fábulas españolas</div>
+			<div class="imagen">
+				<img src="img/fabulas-a.png" alt="fabulas-a">
+				<div class="epigrafe">Reedición del libro Fábulas españolas</div>
+			</div>
+			<div class="imagen">
+				<img src="img/afiches.png" alt="afiches">
+				<div class="epigrafe">Afiches para muestra de Julio Le Parc</div>
+			</div>
+			<div class="imagen">
+				<img src="img/arquigrafías.png" alt="arquigrafias">
+				<div class="epigrafe">Arquigrafías para muestra de Julio Le Parc</div>
+			</div>
+			<div class="imagen">
+				<img src="img/catalogo.png" alt="catalogo">
+				<div class="epigrafe">Catálogo para muestra de Julio Le Parc</div>
+			</div>
+			<div class="imagen">
+				<img src="img/mariposa.png" alt="infografia">
+				<div class="epigrafe">Infografía sobre le ciclo de vida de la mariposa</div>
+			</div>
+			<div class="imagen">
+				<img src="img/postales.png" alt="postales">
+				<div class="epigrafe">Postales de lettering</div>
+			</div>
+			<div class="imagen">
+				<img src="img/Mockup exterior.png" alt="mockup exterior">
+				<div class="epigrafe">Infografía para armar tu propia huerta</div>
+			</div>
+			<div class="imagen">
+				<img src="img/Mockup interior.png" alt="mockup interior">
+				<div class="epigrafe">Infografía para armar tu propia huerta</div>
+			</div>
+			<div class="imagen">
+				<img src="img/latas.png" alt="latas">
+				<div class="epigrafe">Creación de latas de bebida energizante para marca Lenovo</div>
+			</div>
+			<div class="imagen">
+				<img src="img/menu.png" alt="menu">
+				<div class="epigrafe">Creación de Menú para bodegón</div>
+			</div>
+			<div class="imagen">
+				<img src="img/tapa.png" alt="libro">
+				<div class="epigrafe">Libro sobre el uso de la retícula en tipografía</div>
+			</div>
 		</div>
-		<div class="imagen">
-			<img src="img/afiches.png" alt="afiches">
-			<div class="epigrafe">Afiches para muestra de Julio Le Parc</div>
-			</div>
-		<div class="imagen">
-			<img src="img/arquigrafías.png" alt="arquigrafias">
-			<div class="epigrafe">Arquigrafías para muestra de Julio Le Parc</div>
-			</div>
-		<div class="imagen">
-			<img src="img/catalogo.png" alt="catalogo">
-			<div class="epigrafe">Catálogo para muestra de Julio Le Parc</div>
-			</div>
-		<div class="imagen">
-			<img src="img/mariposa.png" alt="infografia">
-			<div class="epigrafe">Infografía sobre le ciclo de vida de la mariposa</div>
-			</div>
-		<div class="imagen">
-			<img src="img/postales.png" alt="postales">
-			<div class="epigrafe">Postales de lettering</div>
-			</div>
-		<div class="imagen">
-			<img src="img/Mockup exterior.png" alt="mockup exterior">
-			<div class="epigrafe">Infografía para armar tu propia huerta</div>
-			</div>
-		<div class="imagen">
-			<img src="img/Mockup interior.png" alt="mockup interior">
-			<div class="epigrafe">Infografía para armar tu propia huerta</div>
-			</div>
-		<div class="imagen">
-			<img src="img/latas.png" alt="latas">
-			<div class="epigrafe">Creación de latas de bebida energizante para marca Lenovo</div>
-			</div>
-		<div class="imagen">
-			<img src="img/menu.png" alt="menu">
-			<div class="epigrafe">Creación de Menú para bodegón</div>
-			</div>
-		<div class="imagen">
-			<img src="img/tapa.png" alt="libro">
-			<div class="epigrafe">Libro sobre el uso de la retícula en tipografía</div>
-			</div>
-	</div>
 	</main>
-	<footer class="footer">Curriculum Vitae y portfolio realizados para Computación III / Universidad Nacional de Lanús</footer>
-</body>
+	<footer>Curriculum Vitae y portfolio realizados para Computación III / Universidad Nacional de Lanús</footer>
+
+	</body>
 </html>
